--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@firebase/app": "^0.8.3",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.10.13",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tanstack/react-query": "^4.13.0",
+    "@tanstack/react-query-devtools": "^4.13.0",
+    "@types/jquery": "^3.5.14",
+    "autoprefixer": "^10.4.12",
+    "better-react-spinkit": "^2.0.4",
+    "firebase": "^9.13.0",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
+    "postcss": "^8.4.18",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
